--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     },
     "require": {
-        "php": "^7.0|^7.3|^8.0",
+        "php": ">=7.2",
         "ext-json": "*",
         "mpdf/mpdf": "^8.0",
         "endroid/qr-code": "^4.4",
