--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,17 @@
 {
-    "name": "lucasnpinheiro/phppimaco",
+    "name": "fernandocvargas/phppimaco",
     "description": "Lib para geração de Etiquetas PIMACO ( LIB do Diogo Bemfica )",
-    "keywords": ["PIMACO", "etiquetas","tags","hang tags"],
+    "keywords": [
+        "PIMACO",
+        "etiquetas",
+        "tags",
+        "hang tags"
+    ],
     "license": "MIT",
     "authors": [
         {
-            "name": "Lucas Nunes Pinto Pinheiro",
-            "email": "pinheirolouco@gmail.com"
+            "name": "Diogo Bemfica",
+            "email": "diogo.fragabemfica@gmail.com"
         }
     ],
     "autoload": {
